@@ -1,5 +1,10 @@
 2010-06-15  Roland McGrath  <roland@redhat.com>
 
+	* dwarf_formref.c (__libdw_formref): Diagnose DW_FORM_ref_sig8 like
+	DW_FORM_ref_addr.
+	* dwarf_formref_die.c (dwarf_formref_die): Diagnose it the same way
+	here, since we don't support it yet.
+
 	* dwarf_next_cfi.c: Handle version 4 format.
 
 	* dwarf_getsrclines.c: Handle version 4 format.
